--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,3 +76,12 @@ body {
 		@apply bg-background text-foreground;
 	}
 }
+
+html::-webkit-scrollbar {
+	width: 10px;
+}
+
+html::-webkit-scrollbar-thumb {
+	background: #ec4899;
+	border-radius: 8px;
+}
